work with corporation and verification lists. Added navigation item

--- a/.htaccess
+++ b/.htaccess
@@ -4,4 +4,5 @@ RewriteRule    ^faq/?$    faq.php    [NC,L]
 RewriteRule    ^preferences/?$    pref.php    [NC,L]
 RewriteRule    ^scanner/?$    mktScan.php    [NC,L]
 RewriteRule    ^corp/([0-9]+)/?$    index.php?corpID=$1    [NC,L]
-RewriteRule    ^corp/?$    index.php    [NC,L]
+RewriteRule    ^corp/?$    verified.php    [NC,L]
+RewriteRule    ^corps/?$    verified.php    [NC,L]
